<resources>
    <string name="app_name">Alisa Diya poep2 st10037089</string>
    <string name="login">Login</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="lets_buzz_into_productivity_with_beebusy_timer">Lets BUZZ into productivity with beebusy timer</string>
    <string name="welcome_onboard">WELCOME ONBOARD !!</string>
    <string name="title_activity_landing">landing</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>